# py42195

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/py42195/: __init__.py  config.py  constants.py  types.py  utils.py
tests/: test_config.py  test_types.py  test_utils.py
