[project]
name = "py42195"
version = "0.1.3"
requires-python = ">= 3.10"
dependencies = []
authors = [{ name = "Jan Pipek", email = "jan.pipek@gmail.com" }]
readme = "README.md"
license = { text = "MIT License" }

[project.urls]
Homepage = "https://github.com/janpipek/py42195"

[project.optional-dependencies]
dev = ["py42195[dev]"]

[build-system]
requires = ["setuptools >= 72.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.uv]
dev-dependencies = [
  "pytest >=8.1.1,<9", "mypy"
]

[tool.bumpver]
current_version = "v0.1.3"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version: {old_version} → {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{pep440_version}"',
]
